welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:13: error: type mismatch;
 found   : Unit
 required: Boolean
			return 
                        ^in1To10:12: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( n<=1 || n>=10 ) {
                ^